fixed table row height to avoid jumping during table pages navigation

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@500;700&family=Montserrat:wght@300;800&family=Source+Sans+Pro:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@500;700&family=Montserrat:wght@300;800&family=Playfair+Display:wght@400;500;600;700&family=Source+Sans+Pro:wght@400;600;700&display=swap');
 /* 
 font-family: 'League Spartan', sans-serif;
 font-family: 'Montserrat', sans-serif;
@@ -7,30 +7,27 @@ font-family: 'Source Sans Pro', sans-serif;
 
 .App {
   font-family: 'Source Sans Pro', sans-serif;
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center; */
-  /* position: relative;
-  min-height: 100%; */
- 
-}
-
-
-.header {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-family: 'Source Sans Pro', sans-serif;
+  width: 100%; 
+}
+
+
+.header {
+  font-family: 'Playfair Display', serif;
+  font-weight: 700;
   background-color: #edf2f4;
   width: 100%;
+  margin-top: 0;
 }
 
 .sub-text {
   font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
+  margin-top: -0.5rem;
 }
 
 .navigation {
@@ -59,6 +56,7 @@ font-family: 'Source Sans Pro', sans-serif;
   color: white;
   background-color: rgb(45, 104, 72);
   background-color: #8d99ae;
+  background-color: #edf2f4;
   color: black;
   cursor: pointer;
   transition: background 0.1s;
@@ -75,6 +73,7 @@ font-family: 'Source Sans Pro', sans-serif;
 }
 
 .main-container {
+  width: 100%;
   padding-bottom: 10rem;
   position: relative;
 }
